--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,6 +55,40 @@
             <p class="lead">Esta é a página inicial da Biblioteca</p>
             <p class="lead">Seja Bem-Vindo(a)</p>
         </div>
+
+        <!-- Tabela de Livros -->
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Autor</th>
+                    <th scope="col">Editora</th>
+                    <th scope="col">Gênero</th>
+                    <th scope="col">Preço</th>
+                    <th scope="col">Data Publicação</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Excluir</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for livro in livros %}
+                <tr>
+                    <td>{{ livro.nome }}</td>
+                    <td>{{ livro.autor }}</td>
+                    <td>{{ livro.editora }}</td>
+                    <td>
+                        {% for genero in livro.genero.all %}
+                        {{ genero.nome }}{% if not forloop.last %}, {% endif %}
+                        {% endfor %}
+                    </td>
+                    <td>{{ livro.preco }}</td>
+                    <td>{{ livro.data_plub }}</td>
+                    <td>{{ livro.status }}</td>
+                    <td><a href="{% url 'delete' livro.id %}" class="btn btn-danger">Excluir</a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 
     <!-- Incluindo jQuery, Popper.js e Bootstrap JS -->
